--- a/boss-rush/Packages/manifest.json
+++ b/boss-rush/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
